--- a/README
+++ b/README
@@ -1,26 +1,26 @@
-This will only work if you have the Python modules webkit and/or 
-GtkMozEmbed installed. You also have to have GTK installed and 
-available to Python.
+I'd like to not repeat myself everywhere, so if you're having
+issues running PyTide out of the box, please go to the wiki:
 
-If you have that stuff and PyTide still doesn't work, that's an
-issue. PyTide is still in a state of constant change so it could
-have been recently broken for everyone. Figure out what's wrong
-if you can, wait a while and redownload if you can't.
+http://wiki.github.com/campadrenalin/PyTide/
 
-Also note that this folder is basically a horrible mess, very
-much like an apartment that hasn't needed to be cleaned since
-I started renting, and now people are visiting. So yeah. There's
-stuff that doesn't do anything. There's stuff that's earlier 
-than experimental. There's basically no documentation. It's a
-wreck. I already know this.
+Be aware of how much this project is a work in progress. Stuff
+is broken. Stuff doesn't exist. There are doorways that lead
+to brick walls or the terrible vacuum of outer space. One of 
+the "nifty" things about PyTide is that it's updated frequently
+even now, while it barely exists, so while we try to keep
+the updates mostly stable, anything can happen. Some updates
+will be more stable and useful than others, and we'll make
+those ones available for Windows testing via Freeze.
 
 If I could ask for anything in particular as something that 
 would help the cause - help expand the WaveImages.txt file
 by adding the base64 URLs for any images in Wave you can find.
 That would be a huge timesaver for me in the GUI department.
 
-Also, once we hammer out a base WaveConnection class that can
-be subclassed to make plugin-like protocols for each server
-type, we can actually start making those plugins. I think
-that's where the open-source concurrency of this project is
-really going to have an opportunity to shine.
+Feel free to start making plugins for the Network. I'm trying
+to focus on getting stuff working in a read-only capacity
+before anything else, stuff can change without warning, etc.
+But it should be safe enough for plugin developers to try to
+keep pace with the GWave plugin in terms of features, as they'll
+be integrated into the main program at roughly the same rate
+as they're coded.
